overflow scroll issue

--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ body {
   max-height: 50rem;
 }
 .homepage .locations .carousel {
-  margin-left: 2rem;
+  padding-left: 2rem;
   gap: 3rem;
 }
 .homepage .locations .carousel #thailand {
