--- a/sass/pages/homepage.scss
+++ b/sass/pages/homepage.scss
@@ -10,7 +10,7 @@
 
     .locations {
         .carousel {
-            margin-left: 2rem;
+            padding-left: 2rem;
             gap: 3rem;
 
             #thailand {
